--- a/Housing_Dataset_Stochastic_GD.ipynb
+++ b/Housing_Dataset_Stochastic_GD.ipynb
@@ -2753,6 +2753,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5021c993",
+   "metadata": {},
+   "source": [
+    "### >r2_score Of Linear Regression: 0.49606402852363796\n",
+    "### >r2_score Of mySGDRegressor:  0.5202523239552943 Hmmmmm... Good Results\n",
+    "### >r2 score Of Skicit-learn SGDRegressor is :  0.5045048078999088"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8a00fa15",
